src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__loop_inside_while.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let total = 0
let i = 0
while i < 2 {
  let j = 0
  loop {
    total = total + 1
    j = j + 1
    if j >= 3 {
      break
    }
  }
  i = i + 1
}
total
}

OK
Int(6)
