src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__methods_2.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
fn Counter() {
  let state = {value: 0}

  let inc = fn() {
    state.value += 1
    state.value
  }

  let dec = fn() {
    state.value -= 1
    state.value
  }

  state.inc = inc
  state.dec = dec

  return state
}

let c = Counter()
print(c.value)
print(c.inc())
print(c.dec())

OK
Nil

STDOUT
0
1
0
