src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__module_var_usage.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
//module
let i = 0
i += 1
print(i)

OK
Nil

STDOUT
1
