src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__module_var_usage_inner_nested_scope.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
//module

let i = 0
fn outer() {
  fn inner() {
    i += 1
  }

  inner
}

print(i)
outer()()
print(i)

OK
Nil

STDOUT
0
1
