src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__module_var_usage_inner_scope.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
//module

let i = 0

fn inc() {
  i += 1
}

print(i)
inc()
print(i)

OK
Nil

STDOUT
0
1
