src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__module_var_use_out_of_order.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
//module

fn f() { i }
let i = 0
f()

OK
Int(0)
