src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__negate_false_var.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
let v = false
not false


OK
Bool(true)
