src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__negate_float_zero_var.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let v = 0.0
not v
}

OK
Bool(true)
