src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__negate_nil_var.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let v = nil
not v
}

OK
Bool(true)
