src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__negate_true_var.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let v = true
not v
}

OK
Bool(false)
